--- a/Week5/exercise24.ipynb
+++ b/Week5/exercise24.ipynb
@@ -9,7 +9,7 @@
     "import sys\n",
     "import copy\n",
     "sys.path.insert(0, \"..\")\n",
-    "from classes.stat_phys.potentials import MD_Simulator, P_dist_handler, H_pot\n",
+    "from classes.stat_phys.potentials import MD_Simulator\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import animation\n",
     "import numpy as np\n",
