--- a/Week8/exercise42.ipynb
+++ b/Week8/exercise42.ipynb
@@ -34,7 +34,7 @@
     "ax.set_ylim([-10.0,10.0])\n",
     "\n",
     "def gauss(xs, A=4.0, x0=2.0, sigm=0.5, c=0.1):\n",
-    "    return A*torch.exp(-((xs-x0)/sigm)**2)+c\n",
+    "    return A*torch.exp(-((xs-x0)/sigm)**2)+c #In order to pass things through torch they have to be in terms of \"torch functions\", like np.exp,np.cos,np.sin .. they have torch.exp,.sin,.cos....\n",
     "\n",
     "def gaussp(xs, A=4.0, x0=2.0, sigm=0.5, c=0.0):\n",
     "    return gauss(xs=xs, c=c)*(-2.0*(xs-x0)/sigm**2)\n",
