fixed plots week4

--- a/Week4/exercise21.ipynb
+++ b/Week4/exercise21.ipynb
@@ -11,12 +11,9 @@
     "sys.path.insert(0, \"..\")\n",
     "from classes.calculators.lennardjones import LennardJones\n",
     "from classes.atoms import Atom_Collection, Atom\n",
-    "from classes.optimizers.metropol import Metropol\n",
-    "from classes.optimizers.random_struct_search import Random_Searcher\n",
-    "from classes.descriptors import PairDistances, CoordinationNumbers, ConnectivityGraphSpectrum, CoulombMatrixSpectrum\n",
+    "from classes.descriptors import CoulombMatrixSpectrum\n",
     "from classes.pca import PCA\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib import animation\n",
     "import numpy as np\n",
     "from sklearn.decomposition import PCA as skPCA\n",
     "plt.rc('animation', html='jshtml')"
