--- a/Week7/exercise 38/exercise38.ipynb
+++ b/Week7/exercise 38/exercise38.ipynb
@@ -45,18 +45,7 @@
     "    atom_col.calculator = LJGauss()\n",
     "    return atom_col\n",
     "\n",
-    "atom_writer = Atom_File_handler()\n",
-    "\n",
-    "opt_cols = []\n",
-    "for i in range(2):\n",
-    "    break\n",
-    "    opt_cols =  []\n",
-    "    for j in range(100):\n",
-    "        optimizer = Line_searcher1(atom_col=make_random_conf())\n",
-    "        optimizer.run(track=False)\n",
-    "        opt_cols.append(optimizer.best_atom_col)\n",
-    "    atom_writer.save_atom_collections(atom_cols=opt_cols, filename=f\"relaxed_structs{i}\")\n",
-    "    "
+    "atom_writer = Atom_File_handler()"
    ]
   },
   {
