--- a/Week3/exercise 16/exercise16.ipynb
+++ b/Week3/exercise 16/exercise16.ipynb
@@ -22,20 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'atoms': [<matplotlib.lines.Line2D at 0x1c02c658f10>,\n",
-       "  <matplotlib.lines.Line2D at 0x1c02c659350>,\n",
-       "  <matplotlib.lines.Line2D at 0x1c02c659a50>,\n",
-       "  <matplotlib.lines.Line2D at 0x1c02c65a350>],\n",
-       " 'unit_cell': None}"
+       "{'atoms': [<matplotlib.lines.Line2D at 0x1e61ae8c710>,\n",
+       "  <matplotlib.lines.Line2D at 0x1e61b18e810>,\n",
+       "  <matplotlib.lines.Line2D at 0x1e61b18ef50>,\n",
+       "  <matplotlib.lines.Line2D at 0x1e61b18f910>],\n",
+       " 'unit_cell': None,\n",
+       " 'extra_cells': None}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -77,7 +78,7 @@
    "outputs": [],
    "source": [
     "rattled_atoms = []\n",
-    "for i in range(17):\n",
+    "for i in range(30):\n",
     "    rattled_col = copy.deepcopy(atom_col)\n",
     "    rattled_col.rattle_atoms(rattle_steps=3, delta=0.5)\n",
     "    rattled_col.calculator = LennardJones()\n",
